--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,1 +1,18 @@
+.App {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    background-color: #fff;
+    width: 100vw;
+    height: 100vh;
+    box-sizing: border-box;
+}
 
+.container {
+    padding: 20px 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
